code ProductController  refactored